Fixing new invisible privacy policy created by fixing last invisible privacy policy

--- a/css/branding.css
+++ b/css/branding.css
@@ -86,6 +86,10 @@ header h1 {
 	color: var(--light);
 }
 
+.frame .pane a {
+	color: var(--link);
+}
+
 .mid-light a {
 	color: var(--light);
 }
